bb-consent-api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consentbb-api
  name: consentbb-api-svc
  namespace: consentbb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: consentbb-api
