bb-consent-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consentbb-api
  name: consentbb-api
  namespace: consentbb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consentbb-api
  template:
    metadata:
      labels:
        app: consentbb-api
    spec:
      containers:
        - image: eu.gcr.io/jenkins-189019/bb-consent-api:main-20230823190117-5fb4404
          imagePullPolicy: IfNotPresent
          name: consentbb-api
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/bb-consent/api/config
              name: config-volume
          resources: {}
      volumes:
        - configMap:
            defaultMode: 420
            name: consentbb-api-config
          name: config-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consentbb-api
  name: consentbb-api-svc
  namespace: consentbb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: consentbb-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: consentbb-api-ing
  namespace: consentbb
spec:
  rules:
    - host: consentbb-api.igrant.io
      http:
        paths:
          - backend:
              service:
                name: consentbb-api-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: consentbb-api-svc
                port:
                  number: 80
            path: /*
            pathType: Prefix
  tls:
    - hosts:
        - consentbb-api.igrant.io
      secretName: tls-secret-govstack
