bb-consent-api/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: consentbb-api-ing
  namespace: consentbb
spec:
  rules:
    - host: consentbb-api.igrant.io
      http:
        paths:
          - backend:
              service:
                name: consentbb-api-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: consentbb-api-svc
                port:
                  number: 80
            path: /*
            pathType: Prefix
  tls:
    - hosts:
        - consentbb-api.igrant.io
      secretName: tls-secret-govstack
